tchangos/logs/bot.log
2025-07-23 07:17:58,400:ERROR:__main__:❌ | <Unexpected error>
Command "tstop" is not found
NoneType: None
2025-07-23 07:18:56,493:ERROR:__main__:❌ | <Unexpected error>
Command "tsopt" is not found
NoneType: None
2025-07-23 07:19:33,944:ERROR:__main__:❌ | <Unexpected error>
Command "remp" is not found
NoneType: None
2025-07-23 08:03:05,453:ERROR:__main__:❌ | <Unexpected error>
Command raised an exception: TypeError: Logger.exception() missing 1 required positional argument: 'msg'
NoneType: None
2025-07-23 08:06:30,909:ERROR:__main__:❌ | <Unexpected error>
Command raised an exception: KeyError: 'partners-partner-could-bot-be-removed'
NoneType: None
2025-07-23 08:31:05,165:ERROR:__main__:❌ | <Unexpected error>
Command raised an exception: KeyError: 'partners-partner-could-bot-be-removed'
NoneType: None
2025-07-23 08:32:27,219:ERROR:__main__:Não foi possível remover ⁨iwametal⁩ da lista de parceiros.
Traceback (most recent call last):
  File "/home/coffee/git/github/Tchangos/tchangos/src/cogs/live/partners.py", line 193, in rm_twitch_partner
    self.partners_list.remove(partner)
    ~~~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^
ValueError: list.remove(x): x not in list
2025-07-23 08:44:12,960:ERROR:__main__:<Failed to load cogs.live.partners>
Traceback (most recent call last):
  File "/home/coffee/.cache/pypoetry/virtualenvs/tchangos-6uD3syJu-py3.11/lib/python3.13/site-packages/discord/ext/commands/bot.py", line 951, in _load_from_module_spec
    spec.loader.exec_module(lib)  # type: ignore
    ~~~~~~~~~~~~~~~~~~~~~~~^^^^^
  File "<frozen importlib._bootstrap_external>", line 1022, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1160, in get_code
  File "<frozen importlib._bootstrap_external>", line 1090, in source_to_code
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/coffee/git/github/Tchangos/tchangos/src/cogs/live/partners.py", line 187
    			partner_obj = self.__partners.get_partner_from_userid(partner.id):
    			                                                                 ^
SyntaxError: invalid syntax

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/coffee/git/github/Tchangos/tchangos/src/bot.py", line 151, in setup_hook
    await self.load_extension(cog_path)
  File "/home/coffee/.cache/pypoetry/virtualenvs/tchangos-6uD3syJu-py3.11/lib/python3.13/site-packages/discord/ext/commands/bot.py", line 1029, in load_extension
    await self._load_from_module_spec(spec, name)
  File "/home/coffee/.cache/pypoetry/virtualenvs/tchangos-6uD3syJu-py3.11/lib/python3.13/site-packages/discord/ext/commands/bot.py", line 954, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'cogs.live.partners' raised an error: SyntaxError: invalid syntax (partners.py, line 187)
2025-07-23 12:55:14,112:ERROR:__main__:❌ | <Unexpected error>
Command "lep" is not found
NoneType: None
2025-07-23 13:17:26,658:ERROR:__main__:❌ | <Unexpected error>
Command "b.action" is not found
NoneType: None
2025-07-23 13:22:38,335:ERROR:__main__:❌ | <Unexpected error>
Command "action" is not found
NoneType: None
2025-07-24 06:09:07,316:ERROR:__main__:<Failed to load cogs.live.partners>
Traceback (most recent call last):
  File "/home/coffee/.cache/pypoetry/virtualenvs/tchangos-6uD3syJu-py3.11/lib/python3.13/site-packages/discord/ext/commands/bot.py", line 963, in _load_from_module_spec
    await setup(self)
  File "/home/coffee/git/github/Tchangos/tchangos/src/cogs/live/partners.py", line 206, in setup
    await bot.add_cog(Partners(bot))
                      ~~~~~~~~^^^^^
  File "/home/coffee/git/github/Tchangos/tchangos/src/cogs/live/partners.py", line 20, in __init__
    self.partners_list = self.__partners.get_partners().sort()
                         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^^
TypeError: '<' not supported between instances of 'dict' and 'dict'

The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/coffee/git/github/Tchangos/tchangos/src/bot.py", line 149, in setup_hook
    await self.load_extension(cog_path)
  File "/home/coffee/.cache/pypoetry/virtualenvs/tchangos-6uD3syJu-py3.11/lib/python3.13/site-packages/discord/ext/commands/bot.py", line 1029, in load_extension
    await self._load_from_module_spec(spec, name)
  File "/home/coffee/.cache/pypoetry/virtualenvs/tchangos-6uD3syJu-py3.11/lib/python3.13/site-packages/discord/ext/commands/bot.py", line 968, in _load_from_module_spec
    raise errors.ExtensionFailed(key, e) from e
discord.ext.commands.errors.ExtensionFailed: Extension 'cogs.live.partners' raised an error: TypeError: '<' not supported between instances of 'dict' and 'dict'
